[tool.poetry]
name = "graph-sampling"
version = "0.0.1"
description = "Graph Sampling Package"
authors = [
    "Kirti Jain <kirtij.mcs16.du@gmail.com>",
    "Ashish Aggarwal <ashish.mcs16.du@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
networkx = "^3.4.2"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
